<resources>
    <string name="app_name">Everymoment</string>
    <string name="diary_edit_button">편집</string>
    <string name="diary_done_button">완료</string>
    <string name="diary_hint_sentence">여기에서는 무슨 일이 있었나요?</string>
    <string name="add_bookmark">북마크가 추가되었습니다</string>
    <string name="remove_bookmark">북마크가 해제되었습니다</string>
    <string name="is_private">나만보기를 선택하셨습니다</string>
    <string name="is_public">친구공개를 선택했습니다</string>
    <string name="msg_diary_delete">일기를 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="account">프로필</string>
    <string name="notification">알림</string>
    <string name="lock_screen_notification">자동 기록 알림</string>
    <string name="push_notification">푸시 알림</string>
    <string name="time_interval_setting">시간 간격 설정</string>
    <string name="time_15min">15분</string>
    <string name="time_20min">20분</string>
    <string name="time_25min">25분</string>
    <string name="time_30min">30분</string>
    <string name="time_interval_text">시간 간격이 %1$s으로 설정되었습니다</string>
    <string name="auto_notification_isChecked">자동 기록 알림이 설정되었습니다</string>
    <string name="auto_notification_isUnChecked">자동 기록 알림이 해제되었습니다</string>
    <string name="push_notification_isChecked">푸시 알림이 설정되었습니다</string>
    <string name="push_notification_isUnChecked">푸시 알림이 해제되었습니다</string>
    <string name="notification_posButton">수락</string>
    <string name="notification_negButton">거절</string>
    <string name="login_description_one">간편하게 로그인하고</string>
    <string name="login_description_two">다양한 서비스를 이용해보세요.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">로그인에 성공하셨습니다.</string>
    <string name="profile_image_dialog">프로필 사진을 변경하시겠습니까?</string>
    <string name="change">변경하기</string>
    <string name="cancel">취소</string>
    <string name="profile_name_dialog">닉네임을 변경하시겠습니까?</string>
    <string name="change_name_dialog">닉네임 변경</string>
    <string name="change_name_dialog_instruction">6자 이내의 닉네임만 가능합니다</string>
    <string name="save">저장</string>
    <string name="example_name">홍길동</string>
    <string name="add_comment_guide">댓글을 달아보세요</string>
    <string name="post">게시</string>
    <string name="comment">댓글</string>
    <string name="search_window_guide">키워드로 검색해주세요</string>
    <string name="search_filter">검색필터</string>
    <string name="category_text">#%1$s</string>
    <string name="category_add_dialog">카테고리 추가</string>
    <string name="example_category">예: 공부, 힐링</string>
    <string name="category_add_dialog_instruction">#은 자동으로 추가됩니다\n카테고리는 6자 이내만 가능합니다</string>
    <string name="search_nickname">닉네임을 검색하세요.</string>
    <string name="find_friends_User">전체 유저에서 친구를 검색하세요.</string>
    <string name="find_friends_Nickname">닉네임으로 친구 찾기</string>
    <string name="search_friends">친구를 검색하세요.</string>
    <string name="add_friends">친구를 추가해보세요.</string>
    <string name="user">사용자</string>
    <string name="friends_list">친구 목록</string>
    <string name="friend_request">친구신청</string>
    <string name="search_nothing">검색 결과가 없습니다.</string>
    <string name="friend">친구</string>
    <string name="request_completed">신청됨</string>
    <string name="location_hint">장소명</string>
    <string name="address_hint">주소</string>
    <string name="nickname_less_one">닉네임은 한 글자 이상이어야 합니다</string>
    <string name="nickname_more_six">닉네임은 여섯 글자 이하여야 합니다</string>
    <string name="category_less_one">카테고리는 한 글자 이상이어야 합니다</string>
    <string name="category_more_six">카테고리는 여섯 글자 이하여야 합니다</string>
    <string name="search_bookmark">북마크로 검색하기</string>
    <string name="search_emoji">감정 표현으로 검색하기</string>
    <string name="search_calendar">날짜로 검색하기</string>
    <string name="close">닫기</string>
    <string name="hash_category">#카테고리</string>
    <string name="search_category">카테고리로 검색하기</string>
    <string name="dont_exist_catrgory">추가된 카테고리가 없습니다</string>
    <string name="reset">초기화</string>
    <string name="do_apply">적용하기</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="invalid_term">시작일이 종료일보다 이를 수 없습니다</string>
    <string name="search_filter_whitespace">검색 필터</string>
    <string name="fcm_channel_description">"FCM 채널 설명"</string>
    <string name="service_state">"서비스 상태"</string>
    <string name="location_now_alarm">"현재 XX 위치에 머무르고 있어요!\n지금의 기분은 어떠신가요?"</string>
    <string name="friend_accept">친구수락</string>
    <string name="no_friend_request">친구요청이 아직 안 왔습니다.</string>
    <string name="friend_request_list">친구 요청 목록</string>
    <string name="check_start_date">시작일을 입력해주셔야 합니다</string>
    <string name="check_end_date">종료일을 입력해주셔야 합니다</string>
    <string name="del_image_dialog">이 사진을 삭제하시겠습니까?</string>
    <string name="del_category_dialog">이 카테고리를 삭제하시겠습니까?</string>
    <string name="check">확인</string>
    <string name="formatted_date">%1$s일</string>
    <string name="del_emotion_dialog">감정 표현을 삭제하시겠습니까?</string>
    <string name="calendar">캘린더</string>
    <string name="back_button_dialog">뒤로 갈 경우\n변경된 내용은 삭제됩니다.\n일기 편집을 그만두시겠습니까?</string>
    <string name="do_stop">그만 두기</string>
    <string name="post_instruction">%1$s님의 일기</string>
    <string name="locantion_and_address_not_blank">장소명과 주소는 비워둘 수 없습니다.</string>
    <string name="del_comment">이 댓글을 삭제하시겠습니까?</string>
    <string name="feature_not_available">해당 기능은 준비 중입니다.\n더 나은 서비스를 제공하기 위해 노력하겠습니다.</string>
    <string name="skip">건너뛰기</string>
    <string name="next">다음</string>
    <string name="non_login">비로그인으로 사용해보기</string>
</resources>